# research-backend

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  semgrep.yml
accounts/: authentication.py  exceptions.py  hooks.py  models.py  renderers.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/vault/: __init__.py  totp.py
anonymisation/: README.md  anonymization_report.docx  anonymizer_script.py  researchdata_view.sql  researchdb.sql
anonymisation/k-anonymity/: test.py
anonymisation/kanonymity/: README.md  metric_result
anonymisation/kanonymity/algorithms/: __init__.py
anonymisation/kanonymity/datasets/: __init__.py
anonymisation/kanonymity/metrics/: __init__.py  cavg.py  dm.py  ncp.py
anonymisation/kanonymity/models/: __init__.py  classifiers.py  split.py
anonymisation/kanonymity/utils/: data.py  types.py
anonymisation/sampledata/: INSTALLATION.txt  alter_statement.sql  create_table.sql  generate.py  generate_relations.sql  init_statement.sql  statement.sql
anonymisation/sampledata/traceit_test/: closecontacts.json  infectionhistory.json  users.json  vaccinationhistory.json  vaccinationtypes.json
anonymisation/test_data_set_1/: medicals.json  patients.json  sql_statements.sql
kanonymity/: anonymize.py  generate_anon_data.py
kanonymity/datasets/: __init__.py
kanonymity/utils/: types.py
research_backend/: asgi.py  settings.py  urls.py  wsgi.py
researchs/: models.py  urls.py  views.py
researchs/migrations/: 0001_initial.py
(+68 files in other folders)
